home contato e footer e fix overflow

--- a/app/assets/stylesheets/my_style.scss
+++ b/app/assets/stylesheets/my_style.scss
@@ -4,6 +4,7 @@
 
 html, body {
   height: 100%;
+  font-size: 16px;
 }
 
 /*Usado em adição ao bootstrap para centralizar*/
@@ -139,10 +140,6 @@ a:visited {
 }
 
 // Listagem de planos com nuvens
-#plans-list {
-  margin-top: 100px;
-}
-
 .cloud-image {
   //position: absolute;
   width: 100%;
@@ -165,36 +162,6 @@ a:visited {
   padding: 0;
 }
 
-.cloud {
-  position: relative;
-}
-
-.cloud:after, .cloud:before {
-  content: '';
-  position: absolute;
-  background-color: white;
-  z-index: 0;
-}
-
-.cloud:after {
-	width: 100px;
-  height: 100px;
-	top: -50px;
-  right: -10px;
-  border-radius: 100px;
-  -webkit-border-radius: 100px;
-  -moz-border-radius: 100px;
-}
-
-.cloud:before {
-  width: 172px;
-  height: 172px;
-  top: -90px;
-  left: -10px;
-  border-radius: 200px;
-  -webkit-border-radius: 200px;
-  -moz-border-radius: 200px;
-}
 // fim da listagem de planos com nuvens
 
 .background-image {
@@ -205,4 +172,24 @@ a:visited {
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
+  // Colocar overflow: hidden no elemento  pai
+  // Colocar position: relative no elemento  pai
 }
+
+// Footer
+.transition-footer {
+  position: relative;
+  width: 100%;
+  margin-top: -100px;
+  overflow: hidden;
+  
+  img {
+    min-width: 100%;
+    max-width: 2000px;
+  }
+}
+
+footer {
+  margin-top: -100px;
+}
+// Fim do Footer
